# xript

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  publish-crates.yml  publish-nuget.yml  publish.yml
docs/: .gitignore  astro.config.mjs  package.json
docs/integrations/: llms-txt.mjs
docs/plans/: 2026-02-06-xript-core-design.md
docs/public/: CNAME
docs/public/images/: xript-logo-40.txt  xript-logo-60.txt  xript-logo.txt
docs/scripts/: sync-guidance.mjs
docs/src/components/: CodeTabs.astro  DungeonModding.astro  ExpressionPlayground.astro  FragmentBuilder.astro  FragmentWorkbench.astro  HeroPlayground.astro  PluginWorkshop.astro  SiteTitle.astro  Terminal.astro  ThemeSelect.astro
docs/src/pages/: index.astro  vision.astro
docs/src/styles/: custom.css
docs/superpowers/plans/: 2026-03-28-rust-runtime-fixes.md  2026-03-28-tools-docs-consolidation.md
docs/superpowers/specs/: 2026-03-28-rust-runtime-fixes-design.md  2026-03-28-tools-docs-consolidation-design.md
examples/: README.md
examples/expression-evaluator/: README.md  manifest.json  package.json
examples/expression-evaluator/src/: demo.js  host.js
examples/game-mod-system/: README.md  manifest.json  package.json
examples/game-mod-system/src/: demo.js  host.js
examples/plugin-system/: README.md  manifest.json  package.json
examples/plugin-system/src/: demo.js
examples/svelte-fragment-renderer/: manifest.json
examples/svelte-fragment-renderer/src/: App.svelte
examples/svelte-fragment-renderer/test/: applyFragment.test.js  dom-shim.js  integration.test.js
examples/ui-dashboard/: manifest.json  package.json
examples/ui-dashboard/src/: demo.js  host.js
renderers/ratatui/: Cargo.toml  README.md
renderers/ratatui/examples/: demo.rs
renderers/ratatui/examples/demo-mod/: manifest.json  mod-manifest.json
renderers/ratatui/examples/demo-mod/fragments/: panel.json
renderers/ratatui/examples/demo-mod/src/: mod.js
renderers/ratatui/src/: layout.rs  lib.rs  logo.rs  parser.rs  render.rs  style.rs
runtimes/: README.md
runtimes/csharp/: README.md  Xript.Runtime.sln
runtimes/js/: README.md  package.json
runtimes/js/src/: capabilities.ts  debug-core.ts  debug-instrument.ts  errors.ts  extends.ts  fragment.ts  index.ts  marshal.ts  module-support.ts  sandbox.ts  shapes.ts  slots.ts
runtimes/js/test/: capability-corpus.test.js  capability-subsumption.test.js  events.test.js  extends-corpus.test.js  fills.test.js  fragment.test.js  hook-slots.test.js  integration.test.js  libraries.test.js  modules.test.js  runtime.test.js  v05.test.js  wave2.test.js
runtimes/node/: README.md  package.json  tsconfig.json
runtimes/node/src/: capabilities.ts  debug-session.ts  debug-types.ts  errors.ts  extends.ts  fragment.ts  index.ts  module-support.ts  roles.ts  sandbox.ts
runtimes/node/test/: capability-corpus.test.js  events.test.js  extends-corpus.test.js  fills.test.js  fragment.test.js  hook-slots.test.js  integration.test.js  libraries.test.js  modules.test.js  runtime.test.js  v05.test.js  wave2.test.js
runtimes/rust/: Cargo.toml  README.md
runtimes/rust/src/: cap_match.rs  capability.rs  debug.rs  error.rs  fragment.rs  handle.rs  lib.rs  manifest.rs  module.rs  sandbox.rs
runtimes/rust/tests/: fills.rs  libraries.rs  module_mode.rs
scripts/: bump-version.mjs  release.mjs
spec/: README.md  annotations.md  bindings.md  capabilities.md  capability-prompt.schema.json  capability-tests.json  debug-messages.schema.json  debug-protocol.md  discovery-result.schema.json  extends-tests.json  extends.md  fragment-formats.md  fragments.md  harness-steps.schema.json  harness.md  harness.schema.json  hooks.md  install-descriptor.schema.json  manifest.md  manifest.schema.json  mod-manifest.md  mod-manifest.schema.json  modules.md  sanitizer-tests.json  security.md  vision.md
tools/: README.md
tools/cli/: .gitignore  README.md  package.json  tsconfig.json
tools/cli/scripts/: sync-content.mjs
tools/cli/src/: cli.ts  describe.ts  guide.ts  harness.ts  index.ts  run.ts
tools/cli/test/: cli.test.js  harness.test.js  mcp.test.js  scan.test.js  v05.test.js
tools/docgen/: README.md  package.json
tools/docgen/src/: cli.ts  index.ts
tools/docgen/test/: docgen.test.js  v05.test.js  v06.test.js  v07.test.js
tools/init/: README.md  package.json
tools/init/src/: cli.ts  (+2 more)
tools/manifest-validator/: package.json
tools/sanitize/: README.md  package.json
tools/typegen/: README.md  package.json
tools/validate/: README.md  package.json
tools/wiz/: Cargo.toml  README.md  manifest.json
tools/wiz/src/: app.rs  completion.rs  main.rs
tools/wiz/src/fragments/: home.json  sanitize.json  scaffold.json  validate.json
tools/wiz/src/screens/: audit.rs  common.rs  diff.rs  home.rs  mod.rs  sanitize.rs  scaffold.rs  validate.rs
(+214 files in other folders)
