[package]
name = "xript-ratatui"
version = "0.3.1"
edition = "2021"
description = "Fragment renderer for Ratatui terminal applications — renders xript UI fragments as terminal widgets."
license = "MIT"
repository = "https://github.com/nekoyoubi/xript"
readme = "README.md"
keywords = ["xript", "ratatui", "tui", "fragment", "renderer"]
categories = ["command-line-interface", "rendering"]

[dependencies]
ratatui = "0.29"
ansi-to-tui = "7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
xript-runtime = { version = "0.3.1", path = "../../runtimes/rust" }
crossterm = "0.28"
