[package]
name = "xript-runtime"
version = "0.1.0"
edition = "2024"
description = "Rust runtime for xript — sandboxed JavaScript execution via QuickJS."
license = "MIT"
repository = "https://github.com/nekoyoubi/xript"
keywords = ["xript", "runtime", "sandbox", "scripting", "quickjs"]

[dependencies]
rquickjs = { version = "0.10", features = ["parallel"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
