[package]
name = "xript-runtime"
version = "0.3.1"
edition = "2024"
description = "Rust runtime for xript. Sandboxed JavaScript execution via QuickJS."
license = "MIT"
repository = "https://github.com/nekoyoubi/xript"
readme = "README.md"
keywords = ["xript", "runtime", "sandbox", "scripting", "quickjs"]
categories = ["game-development", "wasm", "embedded"]

[dependencies]
ammonia = "4"
regex = "1"
rquickjs = { version = "0.10", features = ["parallel"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
