[package]
name = "xript-wiz"
version = "0.3.1"
edition = "2021"
description = "Interactive TUI wizard for the xript toolchain — powered by xript fragments."
license = "MIT"
repository = "https://github.com/nekoyoubi/xript"
readme = "README.md"
keywords = ["xript", "tui", "wizard", "validate", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "xript-wiz"
path = "src/main.rs"

[dependencies]
xript-runtime = { version = "0.3.1", path = "../../runtimes/rust" }
xript-ratatui = { version = "0.3.1", path = "../../renderers/ratatui" }
ratatui = "0.29"
ansi-to-tui = "7"
crossterm = "0.28"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
